--- a/style/css/styles.css
+++ b/style/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../images/fantasyStories.jpg");
+  background-image: url("../images/fantasyStoriesNewImage.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -231,4 +231,5 @@ article {
   background-color: #000000;
   padding: 10px;
   opacity: 0.7;
+
 }
